# local_rag_assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.py
graph/: Nodes.py  states.py  workflow.py
llm/: model.py  structured_output.py
monitoring/: metrics.py  token_counter.py
rag/: embeddings.py  ingestion.py  retreiver.py  vector_store.py
schema/: api_schema.py  response_schema.py
