[project]
name = "local-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
